--- a/lfya/02 La máquina sin memoria.ipynb
+++ b/lfya/02 La máquina sin memoria.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 00 Instalando la librería \n",
+    "### 00 Instalando la librería \n",
     "\n",
     "Se instala la librería [maquinas](https://pypi.org/project/maquinas/)\n",
     "\n",
@@ -31,8 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 01 Importar módulo para cargar autómatas finitos y el módulo de simiulación\n",
+    "### 01 Importar módulos\n",
     "\n",
+    "Se importa el módulo principar para DFAs\n",
     "Existen dos elemento: _load_fa_ y _Simulation_ (en este momento _Simulación_ sólo puede ir hacia adelante)"
    ]
   },
@@ -62,43 +63,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bes_pares=load_fa(\"\"\"\n",
-    "      | a  | b\n",
-    "->q0] | q0 | q1\n",
-    "  q1  | q1 | q0\n",
-    "\"\"\")\n",
-    "bes_pares.print_summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 02.a Graficarlo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "States  : q₀, q₁\n",
-      "Sigma   : a, b\n",
-      "Initial : q₀\n",
-      "Aceptors: {q₀}\n",
-      "Transitions:\n",
-      " q₀,a → q₀\n",
-      " q₀,b → q₁\n",
-      " q₁,b → q₀\n",
-      " q₁,a → q₁\n"
-     ]
-    }
-   ],
-   "source": [
     "#@title creating DFA\n",
     "bes_pares=DFA(Q=['q₀','q₁'],\n",
     "                         sigma=['a','b'],\n",
@@ -114,150 +78,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.a Cargandolo usando función load_fa desde módulo de io"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "States  : q₀, q₁\n",
-      "Sigma   : a, b\n",
-      "Initial : q₀\n",
-      "Aceptors: {q₀}\n",
-      "Transitions:\n",
-      " q₀,a → q₀\n",
-      " q₀,b → q₁\n",
-      " q₁,a → q₁\n",
-      " q₁,b → q₀\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bes_pares=load_fa(\"\"\"\n",
-    "        | a | b\n",
-    "-> q₀]  |q₀  | q₁\n",
-    "   q₁   |q₁  | q₀\n",
-    "\"\"\")\n",
-    "bes_pares.print_summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "States  : q₀, q₁\n",
-      "Sigma   : a, b\n",
-      "Initial : q₀\n",
-      "Aceptors: {q₀}\n",
-      "Transitions:\n",
-      " q₀,a → q₀\n",
-      " q₀,b → q₁\n",
-      " q₁,a → q₁\n",
-      " q₁,b → q₀\n"
-     ]
-    }
-   ],
-   "source": [
-    "bes_pares_=load_fa(\"\"\"\n",
-    "        | a | b\n",
-    "-> q₀   |q₀  | q₁\n",
-    "   q₁]  |q₁  | q₀\n",
-    "\"\"\")\n",
-    "bes_pares.print_summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'q_fs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-91ca750493ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbes_pares_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"bes_pares_\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdpi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"600\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/projects/maquinas/maquinas/regular/fa.py\u001b[0m in \u001b[0;36msave_img\u001b[0;34m(self, filename, q_c, a_c, q_prev, symbols, states, format, dpi, string)\u001b[0m\n\u001b[1;32m    617\u001b[0m             \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    618\u001b[0m             \u001b[0mdpi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdpi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 619\u001b[0;31m             \u001b[0mstring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    620\u001b[0m         )\n\u001b[1;32m    621\u001b[0m         \u001b[0mdot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcleanup\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/maquinas/maquinas/regular/dfa.py\u001b[0m in \u001b[0;36mgraph\u001b[0;34m(self, q_c, a_c, q_prev, symbols, states, format, dpi, string, **args)\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m             \u001b[0;34m(\u001b[0m\u001b[0mq_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minfo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 135\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_fs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    136\u001b[0m                 \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    137\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mq_i\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mq_prev\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma_c\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'q_fs' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "bes_pares1=load_fa(\"\"\"\n",
-    "      | a  | b\n",
-    "->q0  | q0 | q1\n",
-    "  q1] | q1 | q0\n",
-    "\"\"\")\n",
-    "bes_pares1.print_summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bes_pares__=load_fa(\"\"\"\n",
-    "        | a | b\n",
-    "-> q₀]  |q₀  | q₁\n",
-    "   q₁]  |q₁  | q₀\n",
-    "\"\"\")"
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bes_pares1.graph()"
-   "execution_count": 8,
-   "execution_count": null,
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbc8a7da209e42c6a7b5b258ab5b17d2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Text(value='baaabaaabb', description='Cadena'), Button(description='⏎', style=Bu…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for w in cadenas:\n",
-    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",bes_pares.delta_extended(bes_pares.q_0,w))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bes_pares2=load_fa(\"\"\"\n",
     "      | a  | b\n",
     "->q0] | q0 | q1\n",
-    "  q1] | q1 | q0\n",
+    "  q1  | q1 | q0\n",
     "\"\"\")\n",
-    "bes_pares2.print_summary()"
+    "bes_pares.print_summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.b Graficarlo"
    ]
   },
   {
@@ -266,7 +111,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bes_pares2.graph()"
+    "bes_pares.graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03.c Procesando cadenas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Función extendida \n",
+    "\n",
+    "Aplicación de la [función extendida](https://ivanvladimir.gitlab.io/lfya_book/docs/02lam%C3%A1quinasinmemoria/04aut%C3%B3matafinito/#procesando-cadenas-con-af)"
    ]
   },
   {
@@ -275,17 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cadenas=[\"aaa\",\"aab\",'abb','bba','baba','baa']\n",
-    "for w in cadenas:\n",
-    "    print(f\"Probando con {w} el AFD arroja:\",bes_pares2.accepts(w))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "cadenas=[\"a\",\"abb\",\"bbbaaaaa\",\"aabaaaaaabaaaababaaa\"]\n",
+    "\n",
     "for w in cadenas:\n",
     "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",bes_pares.delta_extended(bes_pares.q_0,w))"
    ]
@@ -294,9 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 02.d Simulación\n",
-    "\n",
-    "Simulación es un modo interactivo que permite ver el avance del autómata paso por paso"
+    "#### Aceptando cadenas"
    ]
   },
   {
@@ -304,16 +154,115 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "for w in cadenas:\n",
+    "    print(f\"Probando con {w} el AFD arroja:\",bes_pares.accepts(w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.c Versiones alternativas\n",
+    "\n",
+    "Algunas [variantes alternativas](https://ivanvladimir.gitlab.io/lfya_book/docs/02lam%C3%A1quinasinmemoria/04aut%C3%B3matafinito/#variantes) basadas en los componentes de _bes pares_ pero con estados aceptores diferentes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bes impares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "### 02.e Paso a paso\n",
+    "bes_impares=load_fa(\"\"\"\n",
+    "         | a  | b\n",
+    "-> q₀    |q₀  | q₁\n",
+    "   q₁]   |q₁  | q₀\n",
+    "\"\"\")\n",
+    "bes_impares.print_summary()\n",
+    "bes_impares.graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluación de funición extendida\n",
+    "for w in cadenas:\n",
+    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",bes_impares.delta_extended(bes_pares.q_0,w))\n",
+    "\n",
+    "# Evaluación de cadena en AFD\n",
+    "for w in cadenas:\n",
+    "    print(f\"Probando con {w} el AFD arroja:\",bes_pares.accepts(w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sigma estrella"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_star=load_fa(\"\"\"\n",
+    "        | a | b\n",
+    "-> q₀]  |q₀  | q₁\n",
+    "   q₁]  |q₁  | q₀\n",
+    "\"\"\")\n",
+    "sigma_star.print_summary()\n",
+    "sigma_star.graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluación de funición extendida\n",
+    "for w in cadenas:\n",
+    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",sigma_star.delta_extended(bes_pares.q_0,w))\n",
+    "\n",
+    "# Evaluación de cadena en AFD\n",
+    "for w in cadenas:\n",
+    "    print(f\"Probando con {w} el AFD arroja:\",sigma_star.accepts(w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 03 Simulación\n",
+    "\n",
+    "Simulación para vel avance del autómata paso por paso"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03.a Paso a paso\n",
     "\n",
     "Para visualizar qué pasa paso a paso en el análisis de una cadena se puede iterar sobre la funcion _delta_stepwise_:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +274,43 @@
     "    res=q\n",
     "    \n",
     "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03.b Con simulador\n",
+    "\n",
+    "Es posible visualizar paso a paso usando el simulador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=Simulation(bes_pares,\"abbaa\")\n",
+    "s.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03.c Animación gif\n",
+    "\n",
+    "Es posible generar una animación del AFD procesando una cadena"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bes_pares.save_gif(\"abbaa\", show=True)"
    ]
   }
  ],
