Fixing the demo

--- a/lfya/01 De lenguajes y palabras.ipynb
+++ b/lfya/01 De lenguajes y palabras.ipynb
@@ -548,8 +548,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title substitution of languages\n",
-    "\n",
     "print(\"Substitución L1: \\n\",L1.substitution(m))\n",
     "print(\"Substitución L1*: \\n\",L1.star().substitution(m))"
    ]
@@ -567,12 +565,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title projection of a language\n",
-    "\n",
     "print(\"Projección L1 on {{b}}: \\n\",L1.projection(['b']))\n",
     "\n",
     " #If larger it could take a while to calculate\n",
     "l=L1.star().projection(['b'])\n",
+    "l.max=10",
     "print(\"Proyección L1*: \\n\",L1.star().projection(['b']))"
    ]
   },
