Fixing long time and minor errors

--- a/lfya/02 La máquina sin memoria.ipynb
+++ b/lfya/02 La máquina sin memoria.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "# Evaluación de funición extendida\n",
     "for w in cadenas:\n",
-    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",bes_impares.delta_extended(bes_pares.q_0,w))\n",
+    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",bes_impares.delta_extended(bes_impares.q_0,w))\n",
     "\n",
     "# Evaluación de cadena en AFD\n",
     "for w in cadenas:\n",
@@ -235,7 +235,7 @@
    "source": [
     "# Evaluación de funición extendida\n",
     "for w in cadenas:\n",
-    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",sigma_star.delta_extended(bes_pares.q_0,w))\n",
+    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",sigma_star.delta_extended(sigma_star.q_0,w))\n",
     "\n",
     "# Evaluación de cadena en AFD\n",
     "for w in cadenas:\n",
